# mlb-pe

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  package.json  pnpm-lock.yaml
docs/: _config.yml  index.html  index.md
legacy/: README_R.md  mlb_pe_spread.R  mlb_pe_spread_optim.R
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: smoke.rs
src-tauri/src/: lib.rs  main.rs  mlb_api.rs  model.rs
src/lib/: api.ts  format.ts  types.ts
src/lib/components/: Formula.svelte  InfoTip.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/game/[gamePk]/: +page.svelte  +page.ts
src/routes/learn/: +page.svelte
src/routes/playground/: +page.svelte
src/routes/standings/: +page.svelte
src/routes/stats/: +page.svelte
tasks/: todo.md
