[package]
name = "mlbpe"
version = "0.1.0"
description = "MLB Pythagorean Expectation — predict & learn"
authors = ["Adam Wickwire"]
edition = "2021"

[lib]
name = "mlbpe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
once_cell = "1"
tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
